--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,5 @@ base64 = "0.22.1"
 rand = "0.9.2"
 url = "2.5.4"
 clap = { version = "4.5.45", features = ["derive"] }
-tera = "1.20.0"
+handlebars = {version = "6.3.2", features = ["rust-embed"]}
+rust-embed={version ="8.7.2", features = ["include-exclude"]}
